# videoTranscode

./: .gitignore  README.md
videotranscode/: CMakeLists.txt  README.md
videotranscode/include/: decoder.h  demuxer.h  encoder.h  filter.h  muxer.h  queue.h
videotranscode/lib/: buildso.sh  buildstatic.sh  libSoundTouch.so.1.0.0
videotranscode/src/: Transcode.cpp  audio_decoder.cpp  audio_encoder.cpp  demuxer.cpp  filter.cpp  muxer.cpp  queue.cpp  video_decoder.cpp  video_encoder.cpp
